Added wireframe links to web design page

--- a/web-designs.html
+++ b/web-designs.html
@@ -142,7 +142,7 @@
                                 <p class="mb-4"><span class="text-muted">Client project</span></p>
                                 <div class="mb-5">
                                     <p>University Senior capstone project. Built a website for a Non profit adult soccer league</p>
-                                    <p><a target="_blank" href="https://arcsa.co/" class="readmore">Live link</a></p>
+                                    <p><a target="_blank" href="https://arcsa.co/" class="readmore">Live link</a>  <a target="_blank" href="https://www.figma.com/file/BRI5k5YRmtWkxsVtjPxMQ0nb/ARCSA---Desktop?node-id=0%3A1" class="readmore">Wireframe</a></p>
                                 </div>
                             </div>
                         </div>
@@ -289,7 +289,7 @@
                                 <p class="mb-4"><span class="text-muted">Classroom project</span></p>
                                 <div class="mb-5">
                                     <p>Prompt: Create a website for the University's newest restaurant</p>
-                                    <p><a target="_blank" href="https://sunnyengineer.github.io/BrickHousePizza/" class="readmore">Live link</a> <a target="_blank" href="assets/files/Websites/BrickHouseWireframe.PNG" class="readmore">Wireframe</a></p>
+                                    <p><a target="_blank" href="https://sunnyengineer.github.io/BrickHousePizza/" class="readmore">Live link</a> <a target="_blank" href="https://www.figma.com/file/LeCyLRifIocVwLbxbf3bzb1N/MobileWeb?node-id=0%3A1" class="readmore">Wireframe</a></p>
 
                                 </div>
                             </div>
@@ -339,7 +339,7 @@
                                 <p class="mb-4"><span class="text-muted">Classroom project</span></p>
                                 <div class="mb-5">
                                     <p>Prompt: Create a restaurant for a local business website</p>
-                                    <p><a target="_blank" href="https://sunnyengineer.github.io/TajMahalRestaurant/" class="readmore">Live link</a></p>
+                                    <p><a target="_blank" href="https://sunnyengineer.github.io/TajMahalRestaurant/" class="readmore">Live link</a> <a target="_blank" href="https://www.figma.com/file/JWuHrzaBwfAtJRfUb2CMfPaD/Taj-Mahal-Mobile-Web?node-id=0%3A1" class="readmore">Wireframe</a></p>
 
                                 </div>
                             </div>
