--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
         <section class="section pt-0">
             <div class="text-center">
-                <p><a target="_blank" href="/about.html" class="readmore">Click here to read more about me and to get my
+                <p><a target="_blank" href="about.html" class="readmore">Click here to read more about me and to get my
                         contact info</a></p>
             </div>
         </section>
