--- a/web-designs.html
+++ b/web-designs.html
@@ -153,6 +153,7 @@
                                     <p>University Senior capstone project. Built a website for a Non profit adult soccer league</p>
                                     <p><a target="_blank" href="https://arcsa.co/" class="readmore">Live link</a>  <a target="_blank" href="https://www.figma.com/file/BRI5k5YRmtWkxsVtjPxMQ0nb/ARCSA---Desktop?node-id=0%3A1" class="readmore">Wireframe</a></p>
                                     <p><a target="_blank" href="https://www.youtube.com/watch?v=yChNoqfJUVg" class="readmore">Capstone Defense</a></p>
+                                    <p><a target="_blank" href="assets/files/Websites/project-scope-arcsa.docx" class="readmore">Project Management Plan</a></p>
                                 </div>
                             </div>
                         </div>
