--- a/about.html
+++ b/about.html
@@ -90,6 +90,9 @@
             <h2>About Me</h2>
             <p class="mb-0">Hi there! My name is Sunny Singh and I like to learn and create things. I hope you've enjoyed looking at some of the things I've made in the past. If you'd like to connect with me regarding projects, please reach out to me on linkedin or via email. </p>
           </div>
+          <p></p>
+          <p><a target="_blank" href="assets/CVDec22.pdf" class="readmore">Download my CV</a></p>
+          <p><a target="_blank" href="https://www.linkedin.com/in/sunnyhsingh/" class="readmore">Click here for my Linkedin</a></p>
 
         </div>
 
@@ -108,47 +111,65 @@
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Photoshop</strong>
-                  <span class="ml-auto">96%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 96%" aria-valuenow="96" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
                   <strong>HTML5/CSS3</strong>
-                  <span class="ml-auto">99%</span>
+                  <span class="ml-auto">80%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Veu</strong>
-                  <span class="ml-auto">87%</span>
+                  <strong>Javascript</strong>
+                  <span class="ml-auto">80%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Angular</strong>
-                  <span class="ml-auto">85%</span>
+                  <strong>MySql</strong>
+                  <span class="ml-auto">80%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>React</strong>
-                  <span class="ml-auto">88%</span>
+                  <strong>Git/Github</strong>
+                  <span class="ml-auto">80%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </li>
+              <li class="mb-3">
+                <div class="d-flex mb-1">
+                  <strong>Figma</strong>
+                  <span class="ml-auto">80%</span>
+                </div>
+                <div class="progress custom-progress">
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </li>
+              <li class="mb-3">
+                <div class="d-flex mb-1">
+                  <strong>Photoshop/Illustrator</strong>
+                  <span class="ml-auto">80%</span>
+                </div>
+                <div class="progress custom-progress">
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </li>
+              <li class="mb-3">
+                <div class="d-flex mb-1">
+                  <strong>Lucidcharts</strong>
+                  <span class="ml-auto">80%</span>
+                </div>
+                <div class="progress custom-progress">
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
             </ul>
@@ -156,15 +177,6 @@
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="assets/img/sunny.jpg" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
-              molestias illo dolorem et, odio!</p>
-            <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
-              rem consequuntur, illum adipisci, sed obcaecati!</p>
-            <p>Ex, dolorem qui voluptas reprehenderit provident, ad ipsum iure a consequatur voluptatem incidunt nobis.
-              Vitae reiciendis quae ex.</p>
-            <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
-              nisi voluptatibus. Minus?</p>
-            <p><a target="_blank" href="assets/CVDec22.pdf" class="readmore">Download my CV</a></p>
           </div>
 
         </div>
@@ -178,41 +190,33 @@
   <!-- ======= Footer ======= -->
   <footer class="footer" role="contentinfo">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
-          <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
-          -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <p class="mb-1">2023</p>
+                <!--
+        I used a bootstrap setup from https://bootstrapmade.com/buy/?theme=MyPortfolio
+      -->
+                made for educational purposes by Sunny
+
+            </div>
+            <div class="col-sm-6 social text-md-end">
+                <a target="_blank" href="https://github.com/sunnyengineer/"><span class="bi bi-github"></span></a>
+                <a target="_blank" href="https://www.linkedin.com/in/sunnyhsingh/"><span class="bi bi-linkedin"></span></a>
+            </div>
         </div>
-        <div class="col-sm-6 social text-md-end">
-          <a href="#"><span class="bi bi-twitter"></span></a>
-          <a href="#"><span class="bi bi-facebook"></span></a>
-          <a href="#"><span class="bi bi-instagram"></span></a>
-          <a href="#"><span class="bi bi-linkedin"></span></a>
-        </div>
-      </div>
     </div>
-  </footer>
+</footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+<!-- Vendor JS Files -->
+<script src="assets/vendor/aos/aos.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+<!-- Template Main JS File -->
+<script src="assets/js/main.js"></script>
 
-</body>
-
-</html>
+</body></html>
