Added some more photos and content

--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSFWLHMC3L"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VSFWLHMC3L');
-</script>
 
     <!-- =======================================================
   * Template Name: MyPortfolio - v4.10.0
@@ -132,6 +123,15 @@
                                 <span>Photography</span>
                             </div>
                             <img class="img-fluid" src="assets/img/35mm.png">
+                        </a>
+                    </div>
+                    <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+                        <a href="aerial.html" class="item-wrap fancybox">
+                            <div class="work-info">
+                                <h3>Aerial</h3>
+                                <span>Photography</span>
+                            </div>
+                            <img class="img-fluid" src="assets/img/Aerial/ThumbnailAerial.JPG">
                         </a>
                     </div>
                     <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -337,7 +337,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <p class="mb-1">2023</p>
+                    <p class="mb-1">2024</p>
                     <!--
             I used a bootstrap setup from https://bootstrapmade.com/buy/?theme=MyPortfolio
           -->
