--- a/web-designs.html
+++ b/web-designs.html
@@ -24,15 +24,6 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSFWLHMC3L"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VSFWLHMC3L');
-</script>
 
     <!-- =======================================================
   * Template Name: MyPortfolio - v4.10.0
@@ -151,9 +142,7 @@
                                 <p class="mb-4"><span class="text-muted">Client project</span></p>
                                 <div class="mb-5">
                                     <p>University Senior capstone project. Built a website for a Non profit adult soccer league</p>
-                                    <p><a target="_blank" href="https://arcsa.co/" class="readmore">Live link</a>  <a target="_blank" href="https://www.figma.com/file/BRI5k5YRmtWkxsVtjPxMQ0nb/ARCSA---Desktop?node-id=0%3A1" class="readmore">Wireframe</a></p>
-                                    <p><a target="_blank" href="https://www.youtube.com/watch?v=yChNoqfJUVg" class="readmore">Capstone Defense</a></p>
-                                    <p><a target="_blank" href="assets/files/Websites/project-scope-arcsa.docx" class="readmore">Project Management Plan</a></p>
+                                    <p><a target="_blank" href="https://arcsa.co/" class="readmore">Live link</a></p>
                                 </div>
                             </div>
                         </div>
@@ -300,7 +289,7 @@
                                 <p class="mb-4"><span class="text-muted">Classroom project</span></p>
                                 <div class="mb-5">
                                     <p>Prompt: Create a website for the University's newest restaurant</p>
-                                    <p><a target="_blank" href="https://sunnyengineer.github.io/BrickHousePizza/" class="readmore">Live link</a> <a target="_blank" href="https://www.figma.com/file/LeCyLRifIocVwLbxbf3bzb1N/MobileWeb?node-id=0%3A1" class="readmore">Wireframe</a></p>
+                                    <p><a target="_blank" href="https://sunnyengineer.github.io/BrickHousePizza/" class="readmore">Live link</a> <a target="_blank" href="assets/files/Websites/BrickHouseWireframe.PNG" class="readmore">Wireframe</a></p>
 
                                 </div>
                             </div>
@@ -350,7 +339,7 @@
                                 <p class="mb-4"><span class="text-muted">Classroom project</span></p>
                                 <div class="mb-5">
                                     <p>Prompt: Create a restaurant for a local business website</p>
-                                    <p><a target="_blank" href="https://sunnyengineer.github.io/TajMahalRestaurant/" class="readmore">Live link</a> <a target="_blank" href="https://www.figma.com/file/JWuHrzaBwfAtJRfUb2CMfPaD/Taj-Mahal-Mobile-Web?node-id=0%3A1" class="readmore">Wireframe</a></p>
+                                    <p><a target="_blank" href="https://sunnyengineer.github.io/TajMahalRestaurant/" class="readmore">Live link</a></p>
 
                                 </div>
                             </div>
@@ -454,7 +443,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <p class="mb-1">2023</p>
+                    <p class="mb-1">2024</p>
                     <!--
             I used a bootstrap setup from https://bootstrapmade.com/buy/?theme=MyPortfolio
           -->
