--- a/about.html
+++ b/about.html
@@ -2,97 +2,90 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Sunny Singh's Portfolio</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+  <title>Sunny Singh's Portfolio</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/favicon.png" rel="apple-touch-icon">
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSFWLHMC3L"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
 
-  gtag('config', 'G-VSFWLHMC3L');
-</script>
-
-    <!-- =======================================================
+  <!-- =======================================================
   * Template Name: MyPortfolio - v4.10.0
   ======================================================== -->
 </head>
 
 <body>
 
-    <!-- ======= Navbar ======= -->
-    <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
-        <div class="container py-2 py-md-5">
-            <div class="row align-items-start">
-                <div class="col-md-2">
-                    <ul class="custom-menu">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Me &amp; Contact</a></li>
-                        <li><a href="works.html">Works</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-6 d-none d-md-block  mr-auto">
-                    <div class="tweet d-flex">
-                        <span class="bi bi-linkedin text-white mt-2 mr-3"></span>
-                        <div>
-                            <p><em>Lets connect!<br> <a target="_blank" href="https://www.linkedin.com/in/sunnyhsingh/">Click here to go to my Linkedin</a></em></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 d-none d-md-block">
-                    <h3>Hire Me</h3>
-                    <p>I'm actively looking for UI/UX related roles<br> <a href="#">sunnysingh9131@gmail.com</a></p>
-                </div>
+  <!-- ======= Navbar ======= -->
+  <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
+    <div class="container py-2 py-md-5">
+      <div class="row align-items-start">
+        <div class="col-md-2">
+          <ul class="custom-menu">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me &amp; Contact</a></li>
+            <li><a href="works.html">Works</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 d-none d-md-block  mr-auto">
+          <div class="tweet d-flex">
+            <span class="bi bi-linkedin text-white mt-2 mr-3"></span>
+            <div>
+              <p><em>Lets connect!<br> <a target="_blank" href="https://www.linkedin.com/in/sunnyhsingh/">Click here to
+                    go to my Linkedin</a></em></p>
             </div>
-
+          </div>
         </div>
+        <div class="col-md-4 d-none d-md-block">
+          <h3>Hire Me</h3>
+          <p>I'm actively looking for UI/UX related roles<br> <a href="#">sunnysingh9131@gmail.com</a></p>
+        </div>
+      </div>
+
     </div>
+  </div>
 
-    <nav class="navbar navbar-light custom-navbar">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Sunny's Portfolio.</a>
-            <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-                <span></span>
-            </a>
-        </div>
-    </nav>
+  <nav class="navbar navbar-light custom-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Sunny's Portfolio.</a>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+        <span></span>
+      </a>
+    </div>
+  </nav>
 
-    <main id="main">
+  <main id="main">
 
-       <!-- ======= Section ======= -->
-      
+    <!-- ======= Section ======= -->
+
     <section class="section pb-5">
       <div class="container">
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">Hi there! My name is Sunny Singh and I like to learn and create things. I hope you've enjoyed looking at some of the things I've made in the past. If you'd like to connect with me regarding projects, please reach out to me on linkedin or via email. </p>
+            <p class="mb-0">Hi there! My name is Sunny Singh and I like to learn and create things. I hope you've
+              enjoyed looking at some of the things I've made in the past. If you'd like to connect with me regarding
+              projects, please reach out to me on linkedin or via email. </p>
           </div>
-          <p></p>
-          <p><a target="_blank" href="assets/CVDec22.pdf" class="readmore">Download my CV</a></p>
-          <p><a target="_blank" href="https://www.linkedin.com/in/sunnyhsingh/" class="readmore">Click here for my Linkedin</a></p>
 
         </div>
 
@@ -106,70 +99,58 @@
                   <span class="ml-auto">80%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+              </li>
+              <li class="mb-3">
+                <div class="d-flex mb-1">
+                  <strong>Photoshop</strong>
+                  <span class="ml-auto">96%</span>
+                </div>
+                <div class="progress custom-progress">
+                  <div class="progress-bar" role="progressbar" style="width: 96%" aria-valuenow="96" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>HTML5/CSS3</strong>
-                  <span class="ml-auto">80%</span>
+                  <span class="ml-auto">99%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Javascript</strong>
-                  <span class="ml-auto">80%</span>
+                  <strong>Veu</strong>
+                  <span class="ml-auto">87%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>MySql</strong>
-                  <span class="ml-auto">80%</span>
+                  <strong>Angular</strong>
+                  <span class="ml-auto">85%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Git/Github</strong>
-                  <span class="ml-auto">80%</span>
+                  <strong>React</strong>
+                  <span class="ml-auto">88%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Figma</strong>
-                  <span class="ml-auto">80%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Photoshop/Illustrator</strong>
-                  <span class="ml-auto">80%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Lucidcharts</strong>
-                  <span class="ml-auto">80%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="88" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
               </li>
             </ul>
@@ -177,6 +158,8 @@
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="assets/img/sunny.jpg" alt="Image" class="img-fluid"></p>
+            
+            <p><a target="_blank" href="assets/CVJune24.pdf" class="readmore">Download my CV</a></p>
           </div>
 
         </div>
@@ -190,33 +173,36 @@
   <!-- ======= Footer ======= -->
   <footer class="footer" role="contentinfo">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <p class="mb-1">2023</p>
-                <!--
-        I used a bootstrap setup from https://bootstrapmade.com/buy/?theme=MyPortfolio
-      -->
-                made for educational purposes by Sunny
+      <div class="row">
+        <div class="col-sm-6">
+          <p class="mb-1">2024</p>
+          <!--
+          I used a bootstrap setup from https://bootstrapmade.com/buy/?theme=MyPortfolio
+        -->
+          made for educational purposes by Sunny
 
-            </div>
-            <div class="col-sm-6 social text-md-end">
-                <a target="_blank" href="https://github.com/sunnyengineer/"><span class="bi bi-github"></span></a>
-                <a target="_blank" href="https://www.linkedin.com/in/sunnyhsingh/"><span class="bi bi-linkedin"></span></a>
-            </div>
         </div>
+        <div class="col-sm-6 social text-md-end">
+          <a target="_blank" href="https://github.com/sunnyengineer/"><span class="bi bi-github"></span></a>
+          <a target="_blank" href="https://www.linkedin.com/in/sunnyhsingh/"><span class="bi bi-linkedin"></span></a>
+        </div>
+      </div>
     </div>
-</footer>
+  </footer>
 
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
-<!-- Vendor JS Files -->
-<script src="assets/vendor/aos/aos.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
-<!-- Template Main JS File -->
-<script src="assets/js/main.js"></script>
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
-</body></html>
+</body>
+
+</html>
